# porteurbars

./: .travis.yml  CHANGELOG.md  Cargo.toml  DESIGN.md  Makefile  README.md  index.html  search-index.js
ci/: before_deploy.sh
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/core/ops/deref/: trait.Deref.js
implementors/error_chain/: trait.ChainedError.js
implementors/porteurbars/: trait.ResultExt.js
implementors/std/error/: trait.Error.js
porteurbars/: index.html  sidebar-items.js  struct.Error.html  struct.Template.html  trait.ResultExt.html  type.Result.html
porteurbars/errors/: struct.Error.html  trait.ResultExt.html  type.Result.html
porteurbars/git/: Url.t.html  enum.Url.html  fn.clone.html  index.html  sidebar-items.js
porteurbars/template/: struct.Template.html
src/: defaults.rs  errors.rs  git.rs  lib.rs  main.rs  template.rs
src/porteurbars/: defaults.rs.html  errors.rs.html  git.rs.html  lib.rs.html  template.rs.html
