[package]
name = "porteurbars"
version = "0.0.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "portable git hosted project template"
documentation = "https://softprops.github.io/porteurbars"
homepage = "https://github.com/softprops/porteurbars"
repository = "https://github.com/softprops/porteurbars"
keywords = ["cli", "github", "template"]
license = "MIT"

[[bin]]
doc = false
name = "porteurbars"
path = "src/bin/porteurbars.rs"

[dependencies]
lazy_static = "0.1"
log = "0.3"
env_logger = "0.4"
difference = "0.4"
tempdir = "0.3"
handlebars = "0.25"
clap = "2.20"
regex = "0.2"
walkdir = "1.0"
git2 = "0.6.3"
