[package]
name = "porteurbars"
version = "0.1.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "portable git hosted project template"
documentation = "https://softprops.github.io/porteurbars"
homepage = "https://github.com/softprops/porteurbars"
repository = "https://github.com/softprops/porteurbars"
keywords = ["cli", "github", "template"]
license = "MIT"

[[bin]]
doc = false
name = "porteurbars"
path = "src/bin/porteurbars.rs"

[dependencies]
clap = "2.23"
env_logger = "0.4"
error-chain = "0.10"
difference = "1.0"
git2 = "0.6"
handlebars = "0.27"
lazy_static = "0.2"
log = "0.3"
regex = "0.2"
tempdir = "0.3"
walkdir = "1.0"
term = "0.2.7"