[package]
name = "porteurbars"
version = "0.1.5"
authors = ["softprops <d.tangren@gmail.com>"]
description = "portable git hosted project template"
documentation = "https://softprops.github.io/porteurbars"
homepage = "https://github.com/softprops/porteurbars"
repository = "https://github.com/softprops/porteurbars"
keywords = ["cli", "github", "template"]
license = "MIT"
readme = "README.md"

[[bin]]
doc = false
name = "porteurbars"
path = "src/bin/porteurbars.rs"

[dependencies]
case = "0.1.0"
clap = "2.31.2"
env_logger = "0.5.10"
error-chain = "0.11.0"
difference = "2.0.0"
git2 = "0.7.1"
handlebars = "0.32.4"
lazy_static = "1.0.0"
log = "0.4.1"
regex = "1.0.0"
tempdir = "0.3.7"
walkdir = "2.1.4"
term = "0.5.1"
